Update route signatures that retrieves categories and brands
