# src/controllers/brandControllers.js
@@ -7,9 +7,16 @@ import { removeDuplicateObjects, sendResponse } from '../utils/helperFunctions.j
 import { uploadImage, deleteImage } from '../services/cloudinaryAPIs.js';
 import { UPLOAD_FOLDERS } from '../constants/common.js';
 
-// Fetches a list of all brands
-export const getAllBrands = handleAsync(async (_req, res) => {
-  const brands = await Brand.find();
+// Fetches a list of brands under which products have been listed
+export const getBrands = handleAsync(async (_req, res) => {
+  const products = await Product.find({
+    isDeleted: false,
+  })
+    .select('brand')
+    .populate('brand');
+
+  let brands = products.map(product => product.brand);
+  brands = removeDuplicateObjects(brands, 'id');
 
   sendResponse(res, 200, 'Brands fetched successfully', brands);
 });
@@ -25,6 +32,13 @@ export const getBrandById = handleAsync(async (req, res) => {
   }
 
   sendResponse(res, 200, 'Brand fetched by ID successfully', brand);
+});
+
+// Fetches a list of all brands
+export const getAllBrands = handleAsync(async (_req, res) => {
+  const brands = await Brand.find();
+
+  sendResponse(res, 200, 'All brands fetched successfully', brands);
 });
 
 // Allows admins to add a new brand
@@ -95,14 +109,4 @@ export const updateBrand = handleAsync(async (req, res) => {
   );
 
   sendResponse(res, 200, 'Brand updated successfully', updatedBrand);
-});
-
-// Fetches a list of brands under which products have been listed
-export const getListedBrands = handleAsync(async (_req, res) => {
-  const products = await Product.find({ isDeleted: false }).select('brand').populate('brand');
-
-  let brands = products.map(product => product.brand);
-  brands = removeDuplicateObjects(brands, 'id');
-
-  sendResponse(res, 200, 'Listed brands fetched successfully', brands);
 });
