# src/routes/brandRoutes.js
@@ -1,10 +1,10 @@
 import express from 'express';
 import {
-  getAllBrands,
+  getBrands,
   getBrandById,
+  getAllBrands,
   addNewBrand,
   updateBrand,
-  getListedBrands,
 } from '../controllers/brandControllers.js';
 import { brandSchema, brandIdSchema } from '../schemas/brandSchemas.js';
 import { isAuthenticated, authorizeRole } from '../middlewares/authMiddlewares.js';
@@ -14,15 +14,14 @@ import { ROLES, UPLOAD_FOLDERS, UPLOAD_FILES } from '../constants/common.js';
 
 const router = express.Router();
 
-router.route('/brands').get(getAllBrands);
-router.route('/brands/listed').get(getListedBrands);
+router.route('/brands').get(getBrands);
 router.route('/brands/:brandId').get(validatePathParams(brandIdSchema), getBrandById);
 
 router
   .route('/admin/brands')
+  .all(isAuthenticated, authorizeRole(ROLES.ADMIN))
+  .get(getAllBrands)
   .post(
-    isAuthenticated,
-    authorizeRole(ROLES.ADMIN),
     parseFormData(UPLOAD_FOLDERS.BRAND_LOGOS, UPLOAD_FILES.BRAND_LOGO),
     validatePayload(brandSchema),
     addNewBrand
